--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 </div>
             </div>
             <ul class="mainMenu">
-                <li><a href="https://www.linkedin.com/in/deryauludag/">Linkedin</a></li>
-                <li><a href="https://github.com/dheriau">Github</a></li>
-                <li><a href="https://creative-platypus-258dab.netlify.app/#">Özgeçmiş</a></li>
+                <li><a href="https://www.linkedin.com/in/deryauludag/" target="_blank">Linkedin</a></li>
+                <li><a href="https://github.com/dheriau" target="_blank">Github</a></li>
+                <li><a href="https://creative-platypus-258dab.netlify.app/#" target="_blank">Özgeçmiş</a></li>
                 <li><a href="#">Portfolyo</a></li>
                 <li><a href="#">İletişim</a></li>
             </ul>
